--- a/Plugin/LowPowerMode/package.json
+++ b/Plugin/LowPowerMode/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-plugin-low-power-mode",
-  "version": "0.0.7",
-  "description": "Detects and Notify if batery state is in Low Power Mode.",
+  "version": "0.1.3",
+  "description": "Detects if batery state is in Low Power Mode.",
   "cordova": {
     "id": "cordova-plugin-low-power-mode",
     "platforms": [
